# gpu_project

./: CMakeLists.txt  Makefile  README.md  data.txt  graph.py
include/: bitstream.h  bitstream_homemade.h  coding.h  dct.h  dct_cpu.h  decoupe.cuh  decoupe.h  decoupe_cpu.h  decoupe_gpu.cuh  downsampling.h  encoding.cuh  encoding.h  encoding_gpu.cuh  huffman.h  jpeg_header.h  qtables.h  quantification.h  rgb_to_ycbcr.h  zigzag.h
src/: bitstream.c  coding.c  dct.c  dct.cu  dct_old.c  decoupe.c  decoupe.cu  decoupe_cpu.c  decoupe_gpu.cu  decoupe_old.c  downsampling.c  encoding.cu  encoding_gpu.cu  huffman.c  jpeg_header.c  jpeg_writer.c  ppm2jpeg.c  quantification.c  quantification.cu  quantification_gpu.cu  rgb_to_ycbcr.c
